--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,4 @@
-/**
-* Template Name: Yummy
-* Updated: Sep 18 2023 with Bootstrap v5.3.2
-* Template URL: https://bootstrapmade.com/yummy-bootstrap-restaurant-website-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
-/*--------------------------------------------------------------
-# Set main reusable colors and fonts using CSS variables
-# Learn more about CSS variables at https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties
---------------------------------------------------------------*/
 /* Fonts */
 :root {
   --font-default: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -264,12 +253,12 @@ section {
 }
 
 .header .logo img {
-  max-height: 40px;
+  max-height: 72px;
   margin-right: 6px;
 }
 
 .header .logo h1 {
-  font-size: 28px;
+  font-size: 15px;
   font-weight: 700;
   color: #000;
   margin: 0;
@@ -278,6 +267,7 @@ section {
 
 .header .logo h1 span {
   color: var(--color-primary);
+  text-shadow: 1px 1px 1px black;
 }
 
 .header .btn-book-a-table,
@@ -286,7 +276,7 @@ section {
   color: #fff;
   background: var(--color-primary);
   padding: 8px 20px;
-  margin-left: 30px;
+  margin-left: 10px;
   border-radius: 50px;
   transition: 0.3s;
 }
