--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -239,6 +239,7 @@ section {
   z-index: 997;
   height: 90px;
   border-bottom: 1px solid #fff;
+
 }
 
 @media (max-width: 575px) {
@@ -263,6 +264,7 @@ section {
   color: #000;
   margin: 0;
   font-family: var(--font-secondary);
+  text-shadow: #ffc107;
 }
 
 .header .logo h1 span {
